[tool.poetry]
name = "aoe-find-match-result-flask-backend"
version = "0.1.0"
description = ""
authors = ["noracami <kerke.2011@gmail.com>"]
readme = "README.md"
packages = [{include = "aoe_find_match_result_flask_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pymongo = "^4.10.1"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
